sidux-art-legacy (2009.01.1) unstable; urgency=low

  * Initial release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 19 Apr 2009 21:52:19 +0200