@@ -1,0 +1,485 @@
+Source: sidux-art-legacy
+Section: graphics
+Priority: extra
+Maintainer: Bernard Gray <bernard.gray@gmail.com>
+Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>
+Build-Depends: debhelper (>= 7),
+               inkscape
+Standards-Version: 3.8.1
+Vcs-Svn: svn://svn.berlios.de/fullstory/sidux-art-legacy/trunk
+Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/sidux-art-legacy/trunk/
+
+Package: sidux-art-gdm-gaia
+Architecture: all
+Depends: ${misc:Depends},
+         gdm
+Description: GDM theme for sidux 2007-03 release
+ the default GDM theme for the 2007-03 (Γάια)
+ sidux release.
+
+Package: sidux-art-kdm-gaia
+Architecture: all
+Depends: ${misc:Depends},
+         kdm
+Description: KDM theme for sidux 2007-03 release
+ the default KDM theme for the 2007-03 (Γάια)
+ sidux release.
+
+Package: sidux-art-ksplash-gaia
+Architecture: all
+Depends: ${misc:Depends},
+         kdebase-workspace-bin
+Description: KDE ksplash theme for sidux 2007-03 release
+ the default KDE ksplash theme for the 2007-03
+ (Γάια) sidux release, using the default ksplash engine
+
+Package: sidux-art-xsplash-gaia
+Architecture: all
+Depends: ${misc:Depends},
+         xfce4-session
+Description: Xfce splash theme for sidux 2007-03 release
+ the default Xfce splash theme for the 2007-03
+ (Γάια) sidux release, based on balou theme engine.
+
+Package: sidux-art-wallpaper-gaia
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for 2007-03 release
+ The official wallpaper for the 2007-03 (Γάια)
+ sidux release.
+
+Package: sidux-art-kde-gaia
+Architecture: all
+Provides: sidux-art-kde-theme
+Depends: ${misc:Depends},
+         sidux-art-ksplash-gaia,
+         sidux-art-kdm-gaia,
+Recommends: sidux-art-wallpaper-gaia, dmz-cursor-theme
+Description: KDE theme for sidux 2007-03 release
+ Virtual package providing ksplash, kdm and KDE themes
+ for sidux 2007-03 (Γάια) release
+
+Package: sidux-art-xfce-gaia
+Architecture: all
+Provides: sidux-art-xfce-theme
+Depends: ${misc:Depends},
+         sidux-art-xsplash-gaia,
+         sidux-art-gdm-gaia
+Recommends: sidux-art-wallpaper-gaia, dmz-cursor-theme
+Description: Xfce theme for sidux 2007-03 release
+ Virtual package providing Xfce-splash and gdm themes
+ for sidux 2007-03 (Γάια) release
+
+Package: sidux-art-gdm-eros
+Architecture: all
+Depends: ${misc:Depends},
+         gdm
+Description: GDM theme for sidux 2007-04 release
+ the default GDM theme for the 2007-04 (Έρως)
+ sidux release.
+
+Package: sidux-art-kdm-eros
+Architecture: all
+Depends: ${misc:Depends},
+         kdm
+Description: KDM theme for sidux 2007-04 release
+ the default KDM theme for the 2007-04 (Έρως)
+ sidux release.
+
+Package: sidux-art-ksplash-eros
+Architecture: all
+Depends: ${misc:Depends},
+         kdebase-workspace-bin
+Description: KDE ksplash theme for sidux 2007-04 release
+ the default KDE ksplash theme for the 2007-04
+ (Έρως) sidux release, using the default ksplash engine
+
+Package: sidux-art-xsplash-eros
+Architecture: all
+Depends: ${misc:Depends},
+         xfce4-session
+Description: Xfce splash theme for sidux 2007-04 release
+ the default Xfce splash theme for the 2007-04
+ (Έρως) sidux release, based on balou theme engine.
+
+Package: sidux-art-wallpaper-eros
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for 2007-04 release
+ The official wallpaper for the 2007-04 (Έρως)
+ sidux release.
+
+Package: sidux-art-kde-eros
+Architecture: all
+Provides: sidux-art-kde-theme
+Depends: ${misc:Depends},
+         sidux-art-ksplash-eros,
+         sidux-art-kdm-eros,
+Recommends: sidux-art-wallpaper-eros, dmz-cursor-theme
+Description: KDE theme for sidux 2007-04 release
+ Virtual package providing ksplash, kdm and KDE themes
+ for sidux 2007-04 (Έρως) release
+
+Package: sidux-art-xfce-eros
+Architecture: all
+Provides: sidux-art-xfce-theme
+Depends: ${misc:Depends},
+         sidux-art-xsplash-eros,
+         sidux-art-gdm-eros
+Recommends: sidux-art-wallpaper-eros, dmz-cursor-theme
+Description: Xfce theme for sidux 2007-04 release
+ Virtual package providing Xfce-splash and gdm themes
+ for sidux 2007-04 (Έρως) release
+
+Package: sidux-art-wallpaper-eros-edu
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Conflicts: sidux-art-wallpaper-eros
+Architecture: all
+Description: sidux-edu wallpaper for 2007-04 release
+ the wallpaper for the 2007-04 (Έρως)
+ sidux-edu release. Includes 1920x1200, 1600x1200
+ and 1280x1024 versions
+
+Package: sidux-art-gdm-nyx
+Architecture: all
+Depends: ${misc:Depends},
+         gdm
+Description: GDM theme for sidux 2008-01 release
+ the default GDM theme for the 2008-01 (Νυξ)
+ sidux release.
+
+Package: sidux-art-kdm-nyx
+Architecture: all
+Depends: ${misc:Depends},
+         kdm
+Description: KDM theme for sidux 2008-01 release
+ the default KDM theme for the 2008-01 (Νυξ)
+ sidux release.
+
+Package: sidux-art-ksplash-nyx
+Architecture: all
+Depends: ${misc:Depends},
+         kdebase-workspace-bin
+Description: KDE ksplash theme for sidux 2008-01 release
+ the default KDE ksplash theme for the 2008-01
+ (Νυξ) sidux release, using the default ksplash engine
+
+Package: sidux-art-xsplash-nyx
+Architecture: all
+Depends: ${misc:Depends},
+         xfce4-session
+Description: Xfce splash theme for sidux 2008-01 release
+ the default Xfce splash theme for the 2008-01
+ (Νυξ) sidux release, based on balou theme engine.
+
+Package: sidux-art-wallpaper-nyx
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for 2008-01 release
+ The official wallpaper for the 2008-01 (Νυξ)
+ sidux release.
+
+Package: sidux-art-kde-nyx
+Architecture: all
+Provides: sidux-art-kde-theme
+Depends: ${misc:Depends},
+         sidux-art-ksplash-nyx,
+         sidux-art-kdm-nyx,
+Recommends: sidux-art-wallpaper-nyx, dmz-cursor-theme
+Description: KDE theme for sidux 2008-01 release
+ Virtual package providing ksplash, kdm and KDE themes
+ for sidux 2008-01 (Νυξ) release
+
+Package: sidux-art-xfce-nyx
+Architecture: all
+Provides: sidux-art-xfce-theme
+Depends: ${misc:Depends},
+         sidux-art-xsplash-nyx,
+         sidux-art-gdm-nyx
+Recommends: sidux-art-wallpaper-nyx, dmz-cursor-theme
+Description: Xfce theme for sidux 2008-01 release
+ Virtual package providing Xfce-splash and gdm themes
+ for sidux 2008-01 (Νυξ) release
+
+Package: sidux-art-wallpaper-nyx-edu
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Conflicts: sidux-art-wallpaper-nyx
+Architecture: all
+Description: sidux-edu wallpaper for 2008-01 release
+ the wallpaper for the 2008-01 (Νυξ)
+ sidux-edu release. Includes 1920x1200, 1600x1200
+ and 1280x1024 versions
+
+Package: sidux-art-gdm-erebos
+Architecture: all
+Depends: ${misc:Depends},
+         gdm
+Description: GDM theme for sidux 2008-02 release
+ the default GDM theme for the 2008-02 (Έρεβος)
+ sidux release.
+
+Package: sidux-art-kdm-erebos
+Architecture: all
+Depends: ${misc:Depends},
+         kdm
+Description: KDM theme for sidux 2008-02 release
+ the default KDM theme for the 2008-02 (Έρεβος)
+ sidux release.
+
+Package: sidux-art-ksplash-erebos
+Architecture: all
+Depends: ${misc:Depends},
+         kdebase-workspace-bin
+Description: KDE ksplash theme for sidux 2008-02 release
+ the default KDE ksplash theme for the 2008-02
+ (Έρεβος) sidux release, using the default ksplash engine
+
+Package: sidux-art-xsplash-erebos
+Architecture: all
+Depends: ${misc:Depends},
+         xfce4-session
+Description: Xfce splash theme for sidux 2008-02 release
+ the default Xfce splash theme for the 2008-02
+ (Έρεβος) sidux release, based on balou theme engine.
+
+Package: sidux-art-wallpaper-erebos
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for 2008-02 release
+ The official wallpaper for the 2008-02 (Έρεβος)
+ sidux release.
+
+Package: sidux-art-kde-erebos
+Architecture: all
+Provides: sidux-art-kde-theme
+Depends: ${misc:Depends},
+         sidux-art-ksplash-erebos,
+         sidux-art-kdm-erebos,
+Recommends: sidux-art-wallpaper-erebos, dmz-cursor-theme
+Description: KDE theme for sidux 2008-02 release
+ Virtual package providing ksplash, kdm and KDE themes
+ for sidux 2008-02 (Έρεβος) release
+
+Package: sidux-art-xfce-erebos
+Architecture: all
+Provides: sidux-art-xfce-theme
+Depends: ${misc:Depends},
+         sidux-art-xsplash-erebos,
+         sidux-art-gdm-erebos
+Recommends: sidux-art-wallpaper-erebos, dmz-cursor-theme
+Description: Xfce theme for sidux 2008-02 release
+ Virtual package providing Xfce-splash and gdm themes
+ for sidux 2008-02 (Έρεβος) release
+
+Package: sidux-art-wallpaper-erebos-edu
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Conflicts: sidux-art-wallpaper-erebos
+Architecture: all
+Description: sidux-edu wallpaper for 2008-02 release
+ the wallpaper for the 2008-02 (Έρεβος)
+ sidux-edu release. Includes 1920x1200, 1600x1200
+ and 1280x1024 versions
+
+Package: sidux-art-gdm-ourea
+Architecture: all
+Depends: ${misc:Depends},
+         gdm
+Description: GDM theme for sidux 2008-03 release
+ the default GDM theme for the 2008-03 (Ουρέα)
+ sidux release.
+
+Package: sidux-art-kdm-ourea
+Architecture: all
+Depends: ${misc:Depends},
+         kdm
+Description: KDM theme for sidux 2008-03 release
+ the default KDM theme for the 2008-03 (Ουρέα)
+ sidux release.
+
+Package: sidux-art-ksplash-ourea
+Architecture: all
+Depends: ${misc:Depends},
+         kdebase-workspace-bin
+Description: KDE ksplash theme for sidux 2008-03 release
+ the default KDE ksplash theme for the 2008-03
+ (Ουρέα) sidux release, using the default ksplash engine
+
+Package: sidux-art-xsplash-ourea
+Architecture: all
+Depends: ${misc:Depends},
+         xfce4-session
+Description: Xfce splash theme for sidux 2008-03 release
+ the default Xfce splash theme for the 2008-03
+ (Ουρέα) sidux release, based on balou theme engine.
+
+Package: sidux-art-wallpaper-ourea
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for 2008-03 release
+ The official wallpaper for the 2008-03 (Ουρέα)
+ sidux release.
+
+Package: sidux-art-kde-ourea
+Architecture: all
+Provides: sidux-art-kde-theme
+Depends: ${misc:Depends},
+         sidux-art-ksplash-ourea,
+         sidux-art-kdm-ourea,
+Recommends: sidux-art-wallpaper-ourea, dmz-cursor-theme
+Description: KDE theme for sidux 2008-03 release
+ Virtual package providing ksplash, kdm and KDE themes
+ for sidux 2008-03 (Ουρέα) release
+
+Package: sidux-art-xfce-ourea
+Architecture: all
+Provides: sidux-art-xfce-theme
+Depends: ${misc:Depends},
+         sidux-art-xsplash-ourea,
+         sidux-art-gdm-ourea
+Recommends: sidux-art-wallpaper-ourea, dmz-cursor-theme
+Description: Xfce theme for sidux 2008-03 release
+ Virtual package providing Xfce-splash and gdm themes
+ for sidux 2008-03 (Ουρέα) release
+
+Package: sidux-art-wallpaper-ourea-edu
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Conflicts: sidux-art-wallpaper-ourea
+Architecture: all
+Description: sidux-edu wallpaper for 2008-03 release
+ the wallpaper for the 2008-03 (Ουρέα)
+ sidux-edu release. Includes 1920x1200, 1600x1200
+ and 1280x1024 versions
+
+Package: sidux-art-gdm-pontos
+Architecture: all
+Depends: ${misc:Depends},
+         gdm
+Description: GDM theme for sidux 2008-04 release
+ the default GDM theme for the 2008-04 (Πόντος)
+ sidux release.
+
+Package: sidux-art-kdm-pontos
+Architecture: all
+Depends: ${misc:Depends},
+         kdm
+Description: KDM theme for sidux 2008-04 release
+ the default KDM theme for the 2008-04 (Πόντος)
+ sidux release.
+
+Package: sidux-art-ksplash-pontos
+Architecture: all
+Depends: ${misc:Depends},
+         kdebase-workspace-bin
+Description: KDE ksplash theme for sidux 2008-04 release
+ the default KDE ksplash theme for the 2008-04
+ (Πόντος) sidux release, using the default ksplash engine
+
+Package: sidux-art-xsplash-pontos
+Architecture: all
+Depends: ${misc:Depends},
+         xfce4-session
+Description: Xfce splash theme for sidux 2008-04 release
+ the default Xfce splash theme for the 2008-04
+ (Πόντος) sidux release, based on balou theme engine.
+
+Package: sidux-art-wallpaper-pontos
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for 2008-04 release
+ The official wallpaper for the 2008-04 (Πόντος)
+ sidux release.
+
+Package: sidux-art-kde-pontos
+Architecture: all
+Provides: sidux-art-kde-theme
+Depends: ${misc:Depends},
+         sidux-art-ksplash-pontos,
+         sidux-art-kdm-pontos,
+Recommends: sidux-art-wallpaper-pontos, dmz-cursor-theme
+Description: KDE theme for sidux 2008-04 release
+ Virtual package providing ksplash, kdm and KDE themes
+ for sidux 2008-04 (Πόντος) release
+
+Package: sidux-art-xfce-pontos
+Architecture: all
+Provides: sidux-art-xfce-theme
+Depends: ${misc:Depends},
+         sidux-art-xsplash-pontos,
+         sidux-art-gdm-pontos
+Recommends: sidux-art-wallpaper-pontos, dmz-cursor-theme
+Description: Xfce theme for sidux 2008-04 release
+ Virtual package providing Xfce-splash and gdm themes
+ for sidux 2008-04 (Πόντος) release
+
+Package: sidux-art-gdm-ouranos
+Architecture: all
+Depends: ${misc:Depends},
+         gdm
+Description: GDM theme for sidux 2009-01 release
+ the default GDM theme for the 2009-01 (Οὐρανος)
+ sidux release.
+
+Package: sidux-art-kdm-ouranos
+Architecture: all
+Depends: ${misc:Depends},
+         kdm
+Description: KDM theme for sidux 2009-01 release
+ the default KDM theme for the 2009-01 (Οὐρανος)
+ sidux release.
+
+Package: sidux-art-ksplash-ouranos
+Architecture: all
+Depends: ${misc:Depends},
+         kdebase-workspace-bin
+Description: KDE ksplash theme for sidux 2009-01 release
+ the default KDE ksplash theme for the 2009-01
+ (Οὐρανος) sidux release, using the default ksplash engine
+
+Package: sidux-art-xsplash-ouranos
+Architecture: all
+Depends: ${misc:Depends},
+         xfce4-session
+Description: Xfce splash theme for sidux 2009-01 release
+ the default Xfce splash theme for the 2009-01
+ (Οὐρανος) sidux release, based on balou theme engine.
+
+Package: sidux-art-wallpaper-ouranos
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for 2009-01 release
+ The official wallpaper for the 2009-01 (Οὐρανος)
+ sidux release.
+
+Package: sidux-art-kde-ouranos
+Architecture: all
+Provides: sidux-art-kde-theme
+Depends: ${misc:Depends},
+         sidux-art-ksplash-ouranos,
+         sidux-art-kdm-ouranos,
+Recommends: sidux-art-wallpaper-ouranos, dmz-cursor-theme
+Description: KDE theme for sidux 2009-01 release
+ Virtual package providing ksplash, kdm and KDE themes
+ for sidux 2009-01 (Οὐρανος) release
+
+Package: sidux-art-xfce-ouranos
+Architecture: all
+Provides: sidux-art-xfce-theme
+Depends: ${misc:Depends},
+         sidux-art-xsplash-ouranos,
+         sidux-art-gdm-ouranos
+Recommends: sidux-art-wallpaper-ouranos, dmz-cursor-theme
+Description: Xfce theme for sidux 2009-01 release
+ Virtual package providing Xfce-splash and gdm themes
+ for sidux 2009-01 (Οὐρανος) release
+
