@@ -1,0 +1,62 @@
+Package: sidux-art-gdm-@CODENAME_SAFE@
+Architecture: all
+Depends: ${misc:Depends},
+         gdm
+Description: GDM theme for sidux @VERSION@ release
+ the default GDM theme for the @VERSION@ (@CODENAME@)
+ sidux release.
+
+Package: sidux-art-kdm-@CODENAME_SAFE@
+Architecture: all
+Depends: ${misc:Depends},
+         kdm
+Description: KDM theme for sidux @VERSION@ release
+ the default KDM theme for the @VERSION@ (@CODENAME@)
+ sidux release.
+
+Package: sidux-art-ksplash-@CODENAME_SAFE@
+Architecture: all
+Depends: ${misc:Depends},
+         kdebase-workspace-bin
+Description: KDE ksplash theme for sidux @VERSION@ release
+ the default KDE ksplash theme for the @VERSION@
+ (@CODENAME@) sidux release, using the default ksplash engine
+
+Package: sidux-art-xsplash-@CODENAME_SAFE@
+Architecture: all
+Depends: ${misc:Depends},
+         xfce4-session
+Description: Xfce splash theme for sidux @VERSION@ release
+ the default Xfce splash theme for the @VERSION@
+ (@CODENAME@) sidux release, based on balou theme engine.
+
+Package: sidux-art-wallpaper-@CODENAME_SAFE@
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for @VERSION@ release
+ The official wallpaper for the @VERSION@ (@CODENAME@)
+ sidux release.
+
+Package: sidux-art-kde-@CODENAME_SAFE@
+Architecture: all
+Provides: sidux-art-kde-theme
+Depends: ${misc:Depends},
+         sidux-art-ksplash-@CODENAME_SAFE@,
+         sidux-art-kdm-@CODENAME_SAFE@,
+Recommends: sidux-art-wallpaper-@CODENAME_SAFE@, dmz-cursor-theme
+Description: KDE theme for sidux @VERSION@ release
+ Virtual package providing ksplash, kdm and KDE themes
+ for sidux @VERSION@ (@CODENAME@) release
+
+Package: sidux-art-xfce-@CODENAME_SAFE@
+Architecture: all
+Provides: sidux-art-xfce-theme
+Depends: ${misc:Depends},
+         sidux-art-xsplash-@CODENAME_SAFE@,
+         sidux-art-gdm-@CODENAME_SAFE@
+Recommends: sidux-art-wallpaper-@CODENAME_SAFE@, dmz-cursor-theme
+Description: Xfce theme for sidux @VERSION@ release
+ Virtual package providing Xfce-splash and gdm themes
+ for sidux @VERSION@ (@CODENAME@) release
+
